--- a/_config.yml
+++ b/_config.yml
@@ -23,7 +23,7 @@ footer-links:
   flickr:
   github: kmack3990
   instagram:
-  linkedin: in/kileymack/
+  linkedin: kileymack/
   pinterest:
   rss: # just type anything here for a working RSS icon
   twitter: 
