first post second edit

--- a/_config.yml
+++ b/_config.yml
@@ -6,7 +6,7 @@
 name: Kiley Mack
 
 # Short bio or description (displayed in the header)
-description: Data Scientist
+description: Science Educator and Leader turned Data Scientist | Python | SQL
 
 # URL of your avatar or profile pic (you could use your GitHub profile pic)
 avatar: https://avatars.githubusercontent.com/u/46358049?s=400&u=d186dea1fc76c589352d487cf65859e6b6b96001&v=4 
